# kornel

./: .dir-locals.el  .gitignore  .intero-shim.sh  LICENSE  Makefile  NIX_PATH  README.md  build.cabal  default.nix  fetchNixpkgs.nix  hie.sh  kornel.cabal  nix-shell-persistent  sample-config.dhall  shell.nix  stack.yaml
app/: CLI.hs  LineHandler.hs  Main.hs
app/Kornel/: CLI.hs  LineHandler.hs
app/Kornel/LineHandler/: Chatter.hs  Haskell.hs  HttpSnippets.hs  Scala.hs
app/LineHandler/: BotProxy.hs  Chatter.hs  Clojure.hs  Google.hs  Haskell.hs  HttpSnippets.hs  Scala.hs  Slap.hs
prelude/src/: Prelude.hs
src/: IrcParser.hs
src/Kornel/: CLI.hs  Common.hs  Config.hs  Executable.hs  IrcParser.hs  LineHandler.hs  Log.hs  Main.hs
src/Kornel/LineHandler/: BotProxy.hs  Chatter.hs  Clojure.hs  Google.hs  Haskell.hs  HttpSnippets.hs  Money.hs  Scala.hs  Slap.hs  Wolfram.hs
test/: HIndent_.hs  HLint.hs  HLint_.hs
