name:                kornel
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/michalrus/kornel#readme
license:             Apache-2.0
license-file:        LICENSE
author:              Michal Rus
maintainer:          m@michalrus.com
copyright:           2017 Michal Rus
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     IrcParser
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , attoparsec
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

executable kornel-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , kornel
                     , optparse-applicative
                     , network
                     , connection
                     , bytestring
                     , monad-loops
  default-language:    Haskell2010

test-suite kornel-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , kornel
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/michalrus/kornel
