name:                kornel
version:             0.1.0
homepage:            https://github.com/michalrus/kornel
license:             Apache-2.0
license-file:        LICENSE
author:              Michal Rus
maintainer:          m@michalrus.com
copyright:           2017 Michal Rus
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall -Werror -fwarn-incomplete-uni-patterns
  default-extensions:  DataKinds
                     , DeriveFunctor
                     , DeriveGeneric
                     , DeriveLift
                     , DuplicateRecordFields
                     , FlexibleContexts
                     , FlexibleInstances
                     , GADTs
                     , GeneralizedNewtypeDeriving
                     , LambdaCase
                     , MultiParamTypeClasses
                     , NamedFieldPuns
                     , OverloadedLists
                     , OverloadedStrings
                     , PolyKinds
                     , QuasiQuotes
                     , RankNTypes
                     , RecordWildCards
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , TemplateHaskell
                     , TupleSections
                     , TypeApplications
                     , TypeFamilies
                     , TypeOperators
  exposed-modules:     Kornel.Config
                     , Kornel.IrcParser
                     , Kornel.LineHandler
                     , Kornel.LineHandler.Chatter
                     , Kornel.LineHandler.Slap
                     , Kornel.LineHandler.Google
                     , Kornel.LineHandler.Clojure
                     , Kornel.LineHandler.HttpSnippets
                     , Kornel.LineHandler.BotProxy
                     , Kornel.LineHandler.Scala
                     , Kornel.LineHandler.Haskell
                     , Kornel.Main
  build-depends:       base-noprelude
                     , prelude
                     , aeson
                     , attoparsec
                     , bytestring
                     , connection
                     , html-entities
                     , http-client
                     , http-client-tls
                     , http-conduit
                     , monad-loops
                     , network
                     , optparse-applicative
                     , profunctors
                     , random
                     , regex-base
                     , regex-pcre
                     , text
                     , uuid
  default-language:    Haskell2010

executable kornel-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -Werror -fwarn-incomplete-uni-patterns -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base-noprelude
                     , prelude
                     , kornel
  other-modules:
  default-language:    Haskell2010

test-suite kornel-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base-noprelude
                     , prelude
                     , kornel
  ghc-options:         -Wall -Werror -fwarn-incomplete-uni-patterns -threaded -rtsopts -with-rtsopts=-N
  default-extensions:  DataKinds
                     , DeriveFunctor
                     , DeriveGeneric
                     , DeriveLift
                     , DuplicateRecordFields
                     , FlexibleContexts
                     , FlexibleInstances
                     , GADTs
                     , GeneralizedNewtypeDeriving
                     , LambdaCase
                     , MultiParamTypeClasses
                     , NamedFieldPuns
                     , OverloadedLists
                     , OverloadedStrings
                     , PolyKinds
                     , QuasiQuotes
                     , RankNTypes
                     , RecordWildCards
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , TemplateHaskell
                     , TupleSections
                     , TypeApplications
                     , TypeFamilies
                     , TypeOperators
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/michalrus/kornel
